# Diploma

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  sketch.ipynb
assets/: search_loss.html
configs/: config.yaml
params/directions/: grouped_directions.pkl
params/weights/: weights.pt
src/: app.py  model.py  train.py  utils.py
